REFV-207: upgrading HAPI to 8.8.1